# TauFoldzkVM

./: GITHUB_SETUP.md  IMPLEMENTATION.md  LICENSE  PROJECT_STRUCTURE.md  README.md  README_COMPLETE.md  README_STANDALONE.md  install.sh  prepare_standalone.sh  push_to_github.sh  setup.sh
apps/: calculator.zkvm  crypto_demo.zkvm  pacman_game.zkvm  smart_contract.zkvm  vending_machine.zkvm
compiler/: CONTROL_FLOW_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  achieve_100_percent.py  compositional_add.tau  compositional_add_high.tau  compositional_proof.md  contract_compositional_fixed.py  contract_framework.py  control_flow_generator.py  debug_components.py  fix_failing_patterns.py  fix_final_categories.py  full_zkvm_master.py  full_zkvm_orchestrator.py  generate_comparison_only.py  generate_sample_system.py  next_steps_implementation.md  tau_compiler.py  test_2bit_add.tau  test_aggregator_access.py  test_aggregators_direct.py  test_aggregators_fixed.py  test_arithmetic_direct.py  test_arithmetic_simple.py  test_broader_categories.py  test_comprehensive_progress.py  test_control_flow.py  test_crypto_instructions.py  test_crypto_sample.tau  test_fixed_aggregators.py  test_fixed_aggregators_v2.py  test_full_implementation.py  test_memory_simple.py  test_simple.tau  test_simple_add.tau  test_updated_arithmetic.py  test_write.tau  validate_components.py  validate_existing_system.py  validate_full_zkvm.py  (+5 more)
compiler_rust/: Cargo.toml
compiler_rust/src/: lib.rs  main.rs  verified_generator.rs
distributed/: README.md  aggregation_simple.tau  aggregation_tree.tau  incentive_model.md  proof_request.tau  shard_assignment.tau  shard_specification.py  shard_structure.tau  verification_market.tau
folding/: README.md  protostar_degree3.tau  protostar_folding.py  protostar_instance.tau  protostar_lookup_fold.tau  protostar_noise.tau
isa/: README.md  instruction_set.py  isa_comm.tau  isa_decoder.tau  isa_decoder_simple.tau  isa_fold.tau  isa_lut8.tau  isa_memory.tau  isa_trace.tau
lookups/: README.md  decomposition_framework.md  generate_lookups.py  generate_lookups_v2.py  generate_lookups_v3.py  generate_sub_compact.py  lookup_decomposition.py  lut8_add.tau  lut8_and.tau  lut8_or.tau  lut8_sub.tau  lut8_xor.tau  lut_16bit_add_decomp.tau  lut_16bit_and_decomp.tau  lut_16bit_simple.tau  lut_add_0_0.tau  lut_add_127_128.tau  lut_add_15_16.tau  lut_add_255_1.tau  lut_and_0_0.tau  lut_and_15_240.tau  lut_and_170_85.tau  lut_and_255_255.tau  lut_or_0_0.tau  (+33 more)
runtime/: Cargo.toml  python_runtime.py
runtime/examples/: arithmetic.json  crypto.json  fibonacci.json  simple.json
runtime/src/: examples.rs  executor.rs  instruction.rs  lib.rs  main.rs  state.rs  validator.rs
tui/: Cargo.toml
tui/src/: app.rs  code_editor.rs  debugger.rs  executor.rs  file_browser.rs  main.rs
tui_rust/: Cargo.toml  README.md
tui_rust/src/: app.rs  error_handler.rs  help.rs  main.rs  ui.rs  welcome.rs  zkvm.rs
tui_rust/src/apps/: calculator.rs  crypto_demo.rs  mod.rs  pacman.rs  smart_contract.rs  vending_machine.rs
(+126 files in other folders)
