[package]
name = "tau-zkvm-compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.7"
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"

[[bench]]
name = "constraint_generation"
harness = false