[package]
name = "taufold-tui"
version = "1.0.0"
edition = "2021"
authors = ["Dana Edwards <darklight@darkai.org>"]
description = "Terminal User Interface for TauFoldZKVM"

[dependencies]
taufold-zkvm = { path = "../runtime" }
ratatui = "0.26"
crossterm = "0.27"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dirs = "5.0"
syntect = "5.0"
tui-textarea = "0.4"

[[bin]]
name = "taufold-tui"
path = "src/main.rs"